--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://905a960e-02e5-4c45-90b0-04c76d32d7d0.preview.emergentagent.com
 WDS_SOCKET_PORT=443
